; ModuleID = '/home/carl/AnghaBench/openssl/apps/extr_list.c_list_md_fn.c'
source_filename = "/home/carl/AnghaBench/openssl/apps/extr_list.c_list_md_fn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"  %s\0A\00", align 1
@.str.1 = private unnamed_addr constant [12 x i8] c"<undefined>\00", align 1
@.str.2 = private unnamed_addr constant [12 x i8] c"  %s => %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*, i8*, i8*)* @list_md_fn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @list_md_fn(i32* %0, i8* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %18

11:                                               ; preds = %4
  %12 = load i8*, i8** %8, align 8
  %13 = load i32*, i32** %5, align 8
  %14 = call i32 @EVP_MD_name(i32* %13)
  %15 = sext i32 %14 to i64
  %16 = inttoptr i64 %15 to i8*
  %17 = call i32 (i8*, i8*, i8*, ...) @BIO_printf(i8* %12, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8* %16)
  br label %33

18:                                               ; preds = %4
  %19 = load i8*, i8** %6, align 8
  %20 = icmp eq i8* %19, null
  br i1 %20, label %21, label %22

21:                                               ; preds = %18
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i64 0, i64 0), i8** %6, align 8
  br label %22

22:                                               ; preds = %21, %18
  %23 = load i8*, i8** %7, align 8
  %24 = icmp eq i8* %23, null
  br i1 %24, label %25, label %26

25:                                               ; preds = %22
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i64 0, i64 0), i8** %7, align 8
  br label %26

26:                                               ; preds = %25, %22
  %27 = load i8*, i8** %8, align 8
  %28 = bitcast i8* %27 to i32*
  %29 = bitcast i32* %28 to i8*
  %30 = load i8*, i8** %6, align 8
  %31 = load i8*, i8** %7, align 8
  %32 = call i32 (i8*, i8*, i8*, ...) @BIO_printf(i8* %29, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0), i8* %30, i8* %31)
  br label %33

33:                                               ; preds = %26, %11
  ret void
}

declare dso_local i32 @BIO_printf(i8*, i8*, i8*, ...) #1

declare dso_local i32 @EVP_MD_name(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
